# LanguageStudyApp

./: CMakeLists.txt  Frame.cpp  Frame.h  FunctionalController.cpp  FunctionalController.h  Image.cpp  Image.h  Readme.md  UIApplication.cpp  UIApplication.h  dataset.cpp  dataset.h  main.cpp
wxWidgetsDemo/: Frame.cpp  MainFrame.cpp
